WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203132
Pinch to zoom gesture has to be repeated twice if the cursor isn't moved between gestures
https://bugs.webkit.org/show_bug.cgi?id=203132
Summary
Pinch to zoom gesture has to be repeated twice if the cursor isn't moved betw...
tym46383
Reported
2019-10-17 20:29:37 PDT
Pinching to zoom in Safari 13 (and 12) results in the gesture not being recognized unless the mouse cursor is moved between gestures. Instead, it has to be performed twice before the browser reacts. This works correctly in the WebKit nightly (i.e. you can zoom without moving the mouse), so I'm wondering if it's related to the "tab overview" gesture, which is not in the nightly. As an example, on any page: 1. Pinch out to zoom the page in. 2. Lift up your fingers but don't move the mouse cursor. 3. Do the same gesture again and observe that it doesn't work. The scrollbars appear but the page contents don't zoom. 4. Lift your fingers and do the gesture again. It will work this time. This also applies to zooming out. It doesn't work in Safari Technology Preview 94 either.
Attachments
Patch
(6.56 KB, patch)
2020-03-26 15:05 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2019-10-19 12:12:14 PDT
I can reproduce with Safari 12.1.2 on macOS 10.14.6.
Radar WebKit Bug Importer
Comment 2
2019-10-19 12:12:25 PDT
<
rdar://problem/56436797
>
tym46383
Comment 3
2020-03-19 06:56:15 PDT
This still occurs on macOS 10.15.4 and Safari Technology Preview 102. It doesn’t happen on an iPad using iPadOS 13.4 beta 6 using the same trackpad.
Simon Fraser (smfr)
Comment 4
2020-03-19 10:27:21 PDT
I can reproduce.
tym46383
Comment 5
2020-03-20 10:03:47 PDT
I just tried it with the newest WebKit nightly (
r258747
) and it still works correctly there. Also I've forgotten to mention that I've only tested it on an external trackpad so I don't know if it's specific to them or if it extends to MacBooks too.
Tim Horton
Comment 6
2020-03-20 11:21:27 PDT
(In reply to tym46383 from
comment #5
)
> I just tried it with the newest WebKit nightly (
r258747
) and it still works > correctly there.
This is ... for a silly reason. It's not actually fixed.
> Also I've forgotten to mention that I've only tested it on an external > trackpad so I don't know if it's specific to them or if it extends to > MacBooks too.
It applies to MacBooks too. This is actually tracked in <
rdar://problem/27439348
>.
tym46383
Comment 7
2020-03-20 17:58:29 PDT
(In reply to Tim Horton from
comment #6
)
> This is ... for a silly reason. It's not actually fixed.
Ah, so it works coincidentally. I wonder what's broken in the Nightly that makes the zooming work. Thanks for the Radar Problem ID!
Tim Horton
Comment 8
2020-03-26 15:05:14 PDT
Created
attachment 394661
[details]
Patch
Tim Horton
Comment 9
2020-03-26 15:39:06 PDT
https://trac.webkit.org/changeset/259085/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug