Pinch to zoom gesture has to be repeated twice if the cursor isn't moved between gestures https://bugs.webkit.org/show_bug.cgi?id=203132 <rdar://problem/27439348>

Reviewed by Simon Fraser.

* page/EventHandler.h:

* UIProcess/WebPageProxy.cpp:
* UIProcess/WebPageProxy.h:
* UIProcess/WebPageProxy.messages.in:
* UIProcess/mac/ViewGestureControllerMac.mm:
(WebKit::ViewGestureController::endMagnificationGesture):
* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/WebPage.messages.in:
* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::didEndMagnificationGesture):
Plumb the end of a pinch-zoom gesture to EventHandler.


Canonical link: https://commits.webkit.org/222558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259085 268f45cc-cd09-0410-ab3c-d52691b4dbfc